mobile spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@ section ul {
 
 footer {
   text-align: center;
+  margin: 0 0 16px 0;
 }
 
 /* Media Queries */
